# adepoplan_backend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  conda.yaml  pyproject.toml
.github/workflows/: development.yml
src/adepoplan_backend/: __init__.py  __main__.py  concentration.py  particles.py  quarto_report.py  release.py  report.py  scripts.py
src/adepoplan_backend/templates/: adepoplan.json  crecon.yaml  crecon1.yaml  crecon2.yaml  ladim.yaml  makrel.yaml  quarto_report.qmd  report.html
tests/: test_adepoplan.py  test_concentration.py  test_particles.py  test_release.py  test_report.py  test_scripts.py
tests/end_to_end/: test_end_to_end.py
tests/end_to_end/ex1/: adepoplan.json  cages.geojson  feed.csv  particles.rls
