[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adepoplan_backend"
dynamic = ["version"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
adepoplan_backend = ["*.html", "*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "adepoplan_backend.__version__"}

[tool.pytest.ini_options]
minversion = 6.0
testpaths = ["tests"]
markers = {end_to_end = "End-to-end tests"}
