[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adepoplan_backend"
dynamic = ["version"]
authors = [
    {name = "Pål Næverlid Sævik", email = "paal.naeverlid.saevik@hi.no"},
    {name = "Birgitta Andreasen", email = "birgitta@firum.fo"},
]
description = "Backend for computing ADepoPlan simulations"
license = {text = "MIT"}
dependencies = [
    "ladim",
    "ladim-plugins",
    "ladim-aggregate",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.yaml", "*.qmd"]

[tool.setuptools.dynamic]
version = {attr = "adepoplan_backend.__version__"}

[tool.pytest.ini_options]
minversion = 6.0
testpaths = ["tests"]
markers = {end_to_end = "End-to-end tests"}
